--- a/build.gradle
+++ b/build.gradle
@@ -70,12 +70,6 @@ minecraft {
     // injectedTags.put('MOD_ID', project.archives_base_name)
 }
 
-// Generate a group.archives_base_name.Tags class
-tasks.injectTags.configure {
-    // Change Tags class' name here:
-    outputClassName.set("${project.group}.${project.archives_base_name}.Tags")
-}
-
 repositories {
     maven {
         name 'CleanroomMC Maven'
@@ -100,7 +94,7 @@ dependencies {
         implementation 'com.cleanroommc:assetmover:2.5'
     }
     if (project.use_mixins.toBoolean()) {
-        implementation 'zone.rong:mixinbooter:7.1'
+        implementation 'zone.rong:mixinbooter:9.1'
     }
 
     // Example of deobfuscating a dependency
@@ -108,14 +102,13 @@ dependencies {
 
     if (project.use_mixins.toBoolean()) {
         // Change your mixin refmap name here:
-        String mixin = modUtils.enableMixins('org.spongepowered:mixin:0.8.3', "mixins.${project.archives_base_name}.refmap.json")
-        api (mixin) {
+        api ('zone.rong:mixinbooter:9.1') {
             transitive = false
         }
         annotationProcessor 'org.ow2.asm:asm-debug-all:5.2'
         annotationProcessor 'com.google.guava:guava:24.1.1-jre'
         annotationProcessor 'com.google.code.gson:gson:2.8.6'
-        annotationProcessor (mixin) {
+        annotationProcessor ('zone.rong:mixinbooter:9.1') {
             transitive = false
         }
     }
@@ -204,4 +197,25 @@ idea {
 
 tasks.named("processIdeaSettings").configure {
     dependsOn("injectTags")
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            // from components.java
+            from components.java
+            groupId project.group
+            artifactId project.archives_base_name
+        }
+    }
+    repositories {
+        maven {
+            name = 'CleanroomMaven'
+            url = CleanroomMaven
+            credentials(PasswordCredentials)
+            authentication {
+                basic(BasicAuthentication)
+            }
+        }
+    }
 }
