--- a/gradle.properties
+++ b/gradle.properties
@@ -5,18 +5,18 @@ org.gradle.jvmargs = -Xmx3G
 # Mod Information
 mod_version = 1.0
 maven_group = com.cleanroommc
-archives_base_name = modid
+archives_base_name = strip-latest-forge-requirements
 
 # If any properties changes below this line, run `gradlew setupDecompWorkspace` and refresh gradle again to ensure everything is working correctly.
 
 # Boilerplate Options
-use_mixins = false
-use_coremod = false
+use_mixins = true
+use_coremod = true
 use_assetmover = false
 
 # Access Transformer files should be in the root of `resources` folder and with the filename formatted as: `{archives_base_name}_at.cfg`
 use_access_transformer = false
 
 # Coremod Arguments
-include_mod = true
-coremod_plugin_class_name = 
+include_mod = false
+coremod_plugin_class_name = com.cleanroommc.stripforgereq.StripLatestForgeRequirements
